footer built out, desktop

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,79 @@
-<!-- github icon -->
-<footer class="">
-  <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m23 9v6h-1v2h-1v2h-1v1h-1v1h-1v1h-2v1h-1v-5h-1v-1h1v-1h2v-1h1v-1h1v-5h-1v-3h-2v1h-1v1h-1v-1h-4v1h-1v-1h-1v-1h-2v3h-1v5h1v1h1v1h2v2h-2v-1h-1v-1h-2v1h1v2h1v1h3v3h-1v-1h-2v-1h-1v-1h-1v-1h-1v-2h-1v-2h-1v-6h1v-2h1v-2h1v-1h1v-1h2v-1h2v-1h6v1h2v1h2v1h1v1h1v2h1v2z" /></svg>
+<footer class="flex flex-col w-full max-w-400 mx-auto -md:px-3 px-6 -md:mt-20 mt-40 pb-16">
+  <nav class="w-full grid grid-cols-3 gap-x-5">
+    <ul class="flex col-span-1 space-x-5">
+      <li>
+        <a href="https://github.com/CurtisWirtz" target="_blank" class="group">
+          <svg width="48px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <title>Pixelated Github Icon</title>
+            <path class="group-hover:fill-pank transition-all duration-500" d="m23 9v6h-1v2h-1v2h-1v1h-1v1h-1v1h-2v1h-1v-5h-1v-1h1v-1h2v-1h1v-1h1v-5h-1v-3h-2v1h-1v1h-1v-1h-4v1h-1v-1h-1v-1h-2v3h-1v5h1v1h1v1h2v2h-2v-1h-1v-1h-2v1h1v2h1v1h3v3h-1v-1h-2v-1h-1v-1h-1v-1h-1v-2h-1v-2h-1v-6h1v-2h1v-2h1v-1h1v-1h2v-1h2v-1h6v1h2v1h2v1h1v1h1v2h1v2z" fill="#d1e4dd" />
+          </svg>
+        </a>
+      </li>
+
+      <li>
+        <a href="https://www.linkedin.com/in/curtiswirtz" target="_blank" class="group">
+          <svg class="group-hover:fill-pank transition-all duration-500" width="48px" fill="#d1e4dd" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve">
+            <title>Pixelated Linkedin Icon</title>
+            <g>
+              <g>
+                <rect x="11.13" y="166.957" width="111.304" height="345.043" />
+              </g>
+            </g>
+            <g>
+              <g>
+                <polygon
+                  points="100.174,33.391 100.174,0 33.391,0 33.391,33.391 0,33.391 0,100.174 33.391,100.174 33.391,133.565 
+       100.174,133.565 100.174,100.174 133.565,100.174 133.565,33.391 		"
+                />
+              </g>
+            </g>
+            <g>
+              <g>
+                <polygon
+                  points="478.609,233.739 478.609,200.348 445.217,200.348 445.217,166.957 289.391,166.957 289.391,200.348 256,200.348 
+       256,166.957 155.826,166.957 155.826,512 267.13,512 267.13,300.522 300.522,300.522 300.522,267.13 367.304,267.13 
+       367.304,300.522 400.696,300.522 400.696,512 512,512 512,233.739 		"
+                />
+              </g>
+            </g>
+          </svg>
+        </a>
+      </li>
+      <li>
+        <a href="mailto:curtiswirtz@gmail.com">
+          <span class="sr-only">E-mail</span>
+          <svg class="group" width="60px" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0.0 0.0 110.0 135.0">
+            <title>Icon titled "Envelope pixel" by Donchu from https://thenounproject.com/browse/icons/term/envelope-pixel/. CC BY 3.0 https://creativecommons.org/licenses/by/3.0/</title>
+            <path class="transition-all duration-500 group-hover:fill-pank" fill="#d1e4dd" d="m6.9648 83.094v-3.0742h-6.1484v-61.477h6.1484v-6.1484h86.07v6.1484h6.1484v61.477h-6.1484v6.1484h-86.07zm86.066-9.2227v-6.1484h-6.1484v-6.1484h6.1484v-36.883h-6.1484v-6.1484h-73.77v6.1484h-6.1484v36.883h6.1484v6.1484h-6.1484v12.297h86.07zm-79.918-15.371v-3.0742h12.297v-6.1484h6.1484v-6.1484h-6.1484v-6.1484h-6.1484v-6.1484l-3.0742 0.007813h-3.0742v-6.1484h6.1484v6.1484h6.1484v6.1484h6.1484v6.1484h6.1484v6.1484h6.1484v6.1484h12.297v-6.1484h6.1484v-6.1484h6.1484v-6.1484h6.1484v-6.1484h6.1484v-6.1484h6.1484v6.1484h-6.1484v6.1484h-6.1484v6.1484h-6.1484v6.1484h6.1484v6.1484h12.297v6.1484h-12.297v-6.1484h-6.1484v-6.1484h-6.1484v6.1484h-6.1484v6.1484h-12.297v-6.1484h-6.1484v-6.1484h-6.1484v6.1484h-6.1484v6.1484l-6.1484-0.003906h-6.1484z" />
+          </svg>
+        </a>
+      </li>
+    </ul>
+
+    <ul class="flex flex-col">
+      <h3 class="uppercase text-base mb-2">This Site</h3>
+      <li class="">
+        <a href="https://github.com/CurtisWirtz/curtiswirtz.github.io"><span>Source Code</span></a>
+      </li>
+      <li class="">
+        <a href="#showcase"><span>Showcase</span></a>
+      </li>
+      <li class="">
+        <a href="#about"><span>About</span></a>
+      </li>
+      <li class="">
+        <a href="#contact"><span>Contact</span></a>
+      </li>
+    </ul>
+
+    <div class="col-span-1 flex flex-col items-end">
+      <span class="mb-3">&#169; {{ site.time | date: "%Y" }} | Curtis Wirtz </span>
+      <a class="group relative flex" href="/" aria-label="Home">
+        <span class="sr-only">Home</span>
+        <span aria-hidden="true" class="mr-2 font-micro group-hover:text-pank trasition-all duration-500">&#169;</span>
+        <img src="/assets/images/curtis-icon.png" alt="Pixelated 'Curtis' logo." />
+        <img aria-hidden="true" class="sm:hidden absolute inset-0 z-10 opacity-0 group-hover:opacity-100 trasition-all duration-500" src="/assets/images/curtis-icon-pink.png" alt="Pixelated 'Curtis' logo." />
+      </a>
+    </div>
+  </nav>
 </footer>
