--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,57 @@
 <section id="about" class="flex flex-col w-full max-w-400 mx-auto -md:px-3 px-6 -md:pt-40 pt-80 -md:-mt-20 -mt-40">
-  <header class="step max-auto flex flex-col justify-center items-center -md:mb-20 mb-40 text-center">
+  <header class="step max-w-3xl mx-auto flex flex-col justify-center items-center text-center mb-7">
     <h1 class="shinebig mb-7">About</h1>
-    <p class="max-w-3xl substep animation__delay-short">I&apos;ve tinkered with programming since 1998, when I was 11 years old. After short stints in other careers, as I decided to dedicate myself to programming full time as a professional. when I discovered <a href="https://museumofzzt.com/article/view/747/zzt-oop-101/">ZZT OOP</a> in 1998. m proud to showcase</p>
+    <p class="h3 mb-5">Curtis Wirtz</p>
+    <div class="flex mb-7">
+      <div class="flex">
+        <svg class="mt-1.5" width="40px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 40" x="0px" y="0px">
+          <title>Icon titled "Pin" by Kiki Rizky from https://thenounproject.com/icon/pin-6611599/. CC BY 3.0 https://creativecommons.org/licenses/by/3.0/</title>
+          <path fill="#d1e4dd" d="M27,8v-2h-2v-2h-2v-1.97H9v1.97h-2v2h-2v2h-1.97v10h1.97v2h2v2h2v2h2v2h2v2h2v2h2v-2h2v-2h2v-2h2v-2h2v-2h2v-2h2V8h-2Zm-6,8v2h-2v2h-6v-2h-2v-2h-2v-6h2v-2h2v-2h6v2h2v2h2v6h-2Z" />
+          <polygon fill="transparent" points="19 10 19 8 13 8 13 10 11 10 11 16 13 16 13 18 19 18 19 16 21 16 21 10 19 10" />
+        </svg>
+        <span class="translate-y-0.5 ml-2 flex items-center text-h4">Olympia, WA, USA</span>
+      </div>
+    </div>
+    I feel like my mind is . Whereas on the backend, the detailed-oriented fact-based part of my brain temperment and . find satisfaction in both front-end and back-end work. Building UI's feels like an intersection of art and science, whereas My first job wasin pizza I went back to school in my late 20's to persue medical in the approach that I get to use my artistic side on the frontend, wh
+    <p class="substep animation__delay-short">
+      I love building web sites and web apps.<br /><br />
+      I&apos;ve tinkered with programming since 1998, when I was 11 years old. After short stints in other careers, as I decided to dedicate myself to programming full time as a professional. when I discovered <a href="https://museumofzzt.com/article/view/747/zzt-oop-101/">ZZT OOP</a> in 1998. m proud to showcase
+    </p>
   </header>
+
+  <div class="flex justify-center items-center mb-5">
+    <a href="https://github.com/CurtisWirtz" target="_blank" class="group">
+      <title>Pixelated GitHub Icon</title>
+      <svg width="48px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path class="group-hover:fill-pank transition-all duration-500" d="m23 9v6h-1v2h-1v2h-1v1h-1v1h-1v1h-2v1h-1v-5h-1v-1h1v-1h2v-1h1v-1h1v-5h-1v-3h-2v1h-1v1h-1v-1h-4v1h-1v-1h-1v-1h-2v3h-1v5h1v1h1v1h2v2h-2v-1h-1v-1h-2v1h1v2h1v1h3v3h-1v-1h-2v-1h-1v-1h-1v-1h-1v-2h-1v-2h-1v-6h1v-2h1v-2h1v-1h1v-1h2v-1h2v-1h6v1h2v1h2v1h1v1h1v2h1v2z" fill="#d1e4dd" /></svg>
+    </a>
+    <a href="https://www.linkedin.com/in/curtiswirtz" target="_blank" class="group ml-5">
+      <svg class="group-hover:fill-pank transition-all duration-500" width="48px" fill="#d1e4dd" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve">
+        <title>Pixelated Linkedin Icon</title>
+        <g>
+          <g>
+            <rect x="11.13" y="166.957" width="111.304" height="345.043" />
+          </g>
+        </g>
+        <g>
+          <g>
+            <polygon
+              points="100.174,33.391 100.174,0 33.391,0 33.391,33.391 0,33.391 0,100.174 33.391,100.174 33.391,133.565 
+       100.174,133.565 100.174,100.174 133.565,100.174 133.565,33.391 		"
+            />
+          </g>
+        </g>
+        <g>
+          <g>
+            <polygon
+              points="478.609,233.739 478.609,200.348 445.217,200.348 445.217,166.957 289.391,166.957 289.391,200.348 256,200.348 
+       256,166.957 155.826,166.957 155.826,512 267.13,512 267.13,300.522 300.522,300.522 300.522,267.13 367.304,267.13 
+       367.304,300.522 400.696,300.522 400.696,512 512,512 512,233.739 		"
+            />
+          </g>
+        </g>
+      </svg>
+    </a>
+  </div>
+  <!-- /assets/pfd/curtiswirtzresume.pdf -->
+  <a href="" target="_blank" class="bg-base hover:bg-pank transition-all duration-500 pixel-corners mt-3 pt-2 pb-1.5 px-6 w-fit font-playertwo text-black mx-auto -md:mb-16 mb-20">View Resume</a>
 </section>
