--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,6 +22,7 @@ body {
 
 /* blur/darken anything that passes under the nav as we scroll */
 .nav-menu::before {
+  pointer-events: none;
   content: "";
   position: absolute;
   z-index: -1;
