--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -582,6 +582,7 @@ h3, .h3 {
 h4, .h4 {
   font-family: "Press Start 2P";
   font-weight: 400;
+  font-size: clamp(1.125rem, 1.875vw, 1.5rem);
   line-height: 1.2;
 }
 
@@ -719,6 +720,10 @@ h5, .h5 {
   z-index: 50;
 }
 
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -734,6 +739,10 @@ h5, .h5 {
 
 .mb-20 {
   margin-bottom: 5rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 
 .mb-3\.5 {
@@ -756,12 +765,28 @@ h5, .h5 {
   margin-left: 0.25rem;
 }
 
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.ml-5 {
+  margin-left: 1.25rem;
+}
+
 .ml-auto {
   margin-left: auto;
 }
 
+.mr-12 {
+  margin-right: 3rem;
+}
+
 .mr-16 {
   margin-right: 4rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
 }
 
 .mr-3 {
@@ -780,20 +805,12 @@ h5, .h5 {
   margin-top: 0.75rem;
 }
 
+.mt-40 {
+  margin-top: 10rem;
+}
+
 .mt-\[-11px\] {
   margin-top: -11px;
-}
-
-.mr-14 {
-  margin-right: 3.5rem;
-}
-
-.mr-12 {
-  margin-right: 3rem;
-}
-
-.mr-5 {
-  margin-right: 1.25rem;
 }
 
 .block {
@@ -802,6 +819,10 @@ h5, .h5 {
 
 .flex {
   display: flex;
+}
+
+.grid {
+  display: grid;
 }
 
 .hidden {
@@ -881,13 +902,8 @@ h5, .h5 {
   max-width: 32rem;
 }
 
-.translate-x-2 {
-  --tw-translate-x: 0.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-2 {
-  --tw-translate-y: 0.5rem;
+.translate-y-0\.5 {
+  --tw-translate-y: 0.125rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -926,8 +942,16 @@ h5, .h5 {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
+}
+
+.items-end {
+  align-items: flex-end;
 }
 
 .items-center {
@@ -938,8 +962,23 @@ h5, .h5 {
   justify-content: center;
 }
 
+.gap-x-5 {
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
+}
+
+.space-x-5 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .self-start {
   align-self: flex-start;
+}
+
+.self-center {
+  align-self: center;
 }
 
 .overflow-hidden {
@@ -1014,6 +1053,14 @@ h5, .h5 {
   padding-bottom: 0.375rem;
 }
 
+.pb-16 {
+  padding-bottom: 4rem;
+}
+
+.pb-20 {
+  padding-bottom: 5rem;
+}
+
 .pt-1\.5 {
   padding-top: 0.375rem;
 }
@@ -1034,16 +1081,21 @@ h5, .h5 {
   font-family: "Press Start 2P";
 }
 
-.text-\[20px\] {
-  font-size: 20px;
+.text-\[18px\] {
+  font-size: 18px;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-h4 {
+  font-size: clamp(1.125rem, 1.875vw, 1.5rem);
 }
 
 .text-micro {
   font-size: clamp(0.875rem, 1.25vw, 1rem);
-}
-
-.text-\[18px\] {
-  font-size: 18px;
 }
 
 .uppercase {
@@ -1052,6 +1104,11 @@ h5, .h5 {
 
 .tracking-widest {
   letter-spacing: 0.1em;
+}
+
+.text-base {
+  --tw-text-opacity: 1;
+  color: rgb(209 228 221 / var(--tw-text-opacity, 1));
 }
 
 .text-black {
@@ -1131,6 +1188,7 @@ body {
 /* blur/darken anything that passes under the nav as we scroll */
 
 .nav-menu::before {
+  pointer-events: none;
   content: "";
   position: absolute;
   z-index: -1;
@@ -1476,6 +1534,14 @@ body {
   opacity: 1;
 }
 
+#contact .contact-input::-moz-placeholder {
+  color: #000 !important;
+}
+
+#contact .contact-input::placeholder {
+  color: #000 !important;
+}
+
 .hover\:bg-pank:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(239 126 247 / var(--tw-bg-opacity, 1));
@@ -1558,6 +1624,10 @@ body {
     margin-top: -5rem;
   }
 
+  .-md\:mb-16 {
+    margin-bottom: 4rem;
+  }
+
   .-md\:mb-2\.5 {
     margin-bottom: 0.625rem;
   }
@@ -1574,16 +1644,16 @@ body {
     margin-bottom: 1.25rem;
   }
 
+  .-md\:mr-2\.5 {
+    margin-right: 0.625rem;
+  }
+
   .-md\:mr-5 {
     margin-right: 1.25rem;
   }
 
-  .-md\:mr-3 {
-    margin-right: 0.75rem;
-  }
-
-  .-md\:mr-2\.5 {
-    margin-right: 0.625rem;
+  .-md\:mt-20 {
+    margin-top: 5rem;
   }
 
   .-md\:hidden {
@@ -1594,30 +1664,12 @@ body {
     height: calc(100vh - 64px);
   }
 
-  .-md\:max-w-lg {
-    max-width: 32rem;
-  }
-
-  .-md\:max-w-7 {
-    max-width: 1.75rem;
-  }
-
   .-md\:max-w-8 {
     max-width: 2rem;
   }
 
-  .-md\:max-w-9 {
-    max-width: 2.25rem;
-  }
-
-  .-md\:translate-y-2 {
-    --tw-translate-y: 0.5rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .-md\:translate-y-3 {
-    --tw-translate-y: 0.75rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  .-md\:max-w-lg {
+    max-width: 32rem;
   }
 
   .-md\:translate-y-2\.5 {
