animate about desktop

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,8 +1,8 @@
-<section id="about" class="flex flex-col w-full max-w-400 mx-auto -md:px-3 px-6 -md:pt-40 pt-80 -md:-mt-20 -mt-40">
+<section id="about" class="step flex flex-col w-full max-w-400 mx-auto -md:px-3 px-6 -md:pt-40 pt-80 -md:-mt-20 -mt-40">
   <header class="step max-w-3xl mx-auto flex flex-col justify-center items-center text-center mb-7">
     <h1 class="shinebig mb-7">About</h1>
-    <p class="h3 mb-5">Curtis Wirtz</p>
-    <div class="flex mb-7">
+    <p class="h3 mb-5 substep animation__delay-short">Curtis Wirtz</p>
+    <div class="flex mb-7 substep animation__delay-medium">
       <div class="flex">
         <svg class="mt-1.5" width="40px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 40" x="0px" y="0px">
           <title>Icon titled "Pin" by Kiki Rizky from https://thenounproject.com/icon/pin-6611599/. CC BY 3.0 https://creativecommons.org/licenses/by/3.0/</title>
@@ -12,19 +12,20 @@
         <span class="translate-y-0.5 ml-2 flex items-center text-h4">Olympia, WA, USA</span>
       </div>
     </div>
-    I feel like my mind is . Whereas on the backend, the detailed-oriented fact-based part of my brain temperment and . find satisfaction in both front-end and back-end work. Building UI's feels like an intersection of art and science, whereas My first job wasin pizza I went back to school in my late 20's to persue medical in the approach that I get to use my artistic side on the frontend, wh
-    <p class="substep animation__delay-short">
+    <p class="substep animation__delay-long">
+      I feel like my mind is . Whereas on the backend, the detailed-oriented fact-based part of my brain temperment and . find satisfaction in both front-end and back-end work. Building UI's feels like an intersection of art and science, whereas My first job wasin pizza I went back to school in my late 20's to persue medical in the approach that I get to use my artistic side on the frontend, wh <br /><br />
+
       I love building web sites and web apps.<br /><br />
       I&apos;ve tinkered with programming since 1998, when I was 11 years old. After short stints in other careers, as I decided to dedicate myself to programming full time as a professional. when I discovered <a href="https://museumofzzt.com/article/view/747/zzt-oop-101/">ZZT OOP</a> in 1998. m proud to showcase
     </p>
   </header>
 
   <div class="flex justify-center items-center mb-5">
-    <a href="https://github.com/CurtisWirtz" target="_blank" class="group">
+    <a href="https://github.com/CurtisWirtz" target="_blank" class="group substep animation__delay-short">
       <title>Pixelated GitHub Icon</title>
       <svg width="48px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path class="group-hover:fill-pank transition-all duration-500" d="m23 9v6h-1v2h-1v2h-1v1h-1v1h-1v1h-2v1h-1v-5h-1v-1h1v-1h2v-1h1v-1h1v-5h-1v-3h-2v1h-1v1h-1v-1h-4v1h-1v-1h-1v-1h-2v3h-1v5h1v1h1v1h2v2h-2v-1h-1v-1h-2v1h1v2h1v1h3v3h-1v-1h-2v-1h-1v-1h-1v-1h-1v-2h-1v-2h-1v-6h1v-2h1v-2h1v-1h1v-1h2v-1h2v-1h6v1h2v1h2v1h1v1h1v2h1v2z" fill="#d1e4dd" /></svg>
     </a>
-    <a href="https://www.linkedin.com/in/curtiswirtz" target="_blank" class="group ml-5">
+    <a href="https://www.linkedin.com/in/curtiswirtz" target="_blank" class="group ml-5 substep animation__delay-medium">
       <svg class="group-hover:fill-pank transition-all duration-500" width="48px" fill="#d1e4dd" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve">
         <title>Pixelated Linkedin Icon</title>
         <g>
@@ -52,6 +53,5 @@
       </svg>
     </a>
   </div>
-  <!-- /assets/pfd/curtiswirtzresume.pdf -->
-  <a href="" target="_blank" class="bg-base hover:bg-pank transition-all duration-500 pixel-corners mt-3 pt-2 pb-1.5 px-6 w-fit font-playertwo text-black mx-auto -md:mb-16 mb-20">View Resume</a>
+  <a href="/assets/pfd/curtiswirtzresume.pdf " target="_blank" class="substep animation__delay-long bg-base hover:bg-pank transition-all duration-500 pixel-corners mt-3 pt-2 pb-1.5 px-6 w-fit font-playertwo text-black mx-auto -md:mb-16 mb-20">View Resume</a>
 </section>
