contact animations set

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,10 +2,10 @@
   <header class="step max-auto flex flex-col justify-center items-center text-center">
     <h1 class="shinebig mb-7">Contact</h1>
   </header>
-  <form class="flex flex-col max-w-3xl mx-auto" action="https://formspree.io/f/mkggkpab" method="POST">
+  <form class="step flex flex-col max-w-3xl mx-auto" action="https://formspree.io/f/mkggkpab" method="POST">
     <fieldset class="flex w-full">
-      <legend class="h3 mb-5 block text-center">Let's bring your ideas to life.</legend>
-      <div class="w-full flex flex-col">
+      <legend class="h3 mb-5 block text-center substep animation__delay-short">Let's bring your ideas to life.</legend>
+      <div class="w-full flex flex-col substep animation__delay-medium">
         <div class="flex w-full space-x-5 mb-2">
           <label class="flex flex-col mb-2 w-full">
             <span class="uppercase text-micro tracking-widest mb-2 text-center">Name*</span>
