--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -49,5 +49,5 @@
     </div>
   </article>
   {% endfor %}
-  <button id="loadMoreProjects" class="step bg-base hover:bg-pank transition-all duration-500 pixel-corners pt-2 pb-1.5 px-6 w-fit mx-auto font-playertwo text-black -md:mb-20 mb-20">Load More Projects</button>
+  <button id="loadMoreProjects" class="relative z-10 bg-base hover:bg-pank transition-all duration-500 pixel-corners pt-2 pb-1.5 px-6 w-fit mx-auto font-playertwo text-black -md:mb-20 mb-20">Load More Projects</button>
 </section>
