--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -15,7 +15,7 @@
     <div class="-md:max-w-lg -md:mx-auto -md:mb-3 w-full md:w-2/5 lg:w-1/2 relative overflow-hidden pixel-corners aspect-[5/3]">
       <img class="zooms absolute w-full h-full z-0 inset-0 object-cover" src="{{project.image}}" alt="Screenshot of the {{project.title}} website." />
     </div>
-    <div class="w-full md:w-3/5 lg:w-1/2 relative px-6">
+    <div class="w-full md:w-3/5 lg:w-1/2 relative -md:px-0 px-6">
       <div class="max-w-lg mx-auto flex flex-col justify-center h-full z-10 text-center">
         {% if project.title %}
         <h2 class="substep mb-3.5 -md:hidden">{{project.title}}</h2>
