resume button mobile styling

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -53,5 +53,5 @@
       </svg>
     </a>
   </div>
-  <a href="/assets/pfd/curtiswirtzresume.pdf " target="_blank" class="bg-base hover:bg-pank transition-all duration-500 pixel-corners mt-3 pt-2 pb-1.5 px-6 w-fit font-playertwo text-black mx-auto -md:mb-16 mb-20">View Resume</a>
+  <a href="/assets/pfd/curtiswirtzresume.pdf " target="_blank" class="-md:w-full text-center bg-base hover:bg-pank transition-all duration-500 pixel-corners mt-3 pt-2 pb-1.5 px-6 w-fit font-playertwo text-black mx-auto -md:mb-16 mb-20">View Resume</a>
 </section>
