--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -6,7 +6,7 @@
     <fieldset class="flex w-full">
       <legend class="h3 mb-5 block text-center substep animation__delay-short">Let's bring your ideas to life.</legend>
       <div class="w-full flex flex-col substep animation__delay-medium">
-        <div class="flex w-full space-x-5 mb-2">
+        <div class="flex -md:flex-col w-full md:space-x-5 mb-2">
           <label class="flex flex-col mb-2 w-full">
             <span class="uppercase text-micro tracking-widest mb-2 text-center">Name*</span>
             <input class="contact-input text-black py-3 px-5 pixel-corners bg-base" type="name" name="name" required placeholder="Name" />
@@ -21,7 +21,7 @@
           <textarea class="contact-input text-black py-3 px-5 pixel-corners bg-base" name="message" required placeholder="Describe your project needs"></textarea>
         </label>
         <input type="text" name="_gotcha" style="display: none" />
-        <button class="bg-base hover:bg-pank transition-all duration-500 pixel-corners mt-3 pt-2 pb-1.5 px-6 w-fit self-center font-playertwo text-black" type="submit">Send</button>
+        <button class="-md:w-full bg-base hover:bg-pank transition-all duration-500 pixel-corners mt-3 pt-2 pb-1.5 px-6 w-fit self-center font-playertwo text-black" type="submit">Send</button>
       </div>
     </fieldset>
   </form>
