--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,26 +2,26 @@
   <header class="step max-auto flex flex-col justify-center items-center text-center">
     <h1 class="shinebig mb-7">Contact</h1>
   </header>
-  <form class="step flex flex-col max-w-3xl mx-auto" action="https://formspree.io/f/mkggkpab" method="POST">
+  <form class="step flex flex-col max-w-xl mx-auto" action="https://formspree.io/f/mkggkpab" method="POST">
     <fieldset class="flex w-full">
-      <legend class="h3 mb-5 block text-center substep animation__delay-short">Let's bring your ideas to life.</legend>
+      <legend class="h3 mb-5 text-center block substep animation__delay-short">Let's bring your ideas to life.</legend>
       <div class="w-full flex flex-col substep animation__delay-medium">
         <div class="flex -md:flex-col w-full md:space-x-5 mb-2">
           <label class="flex flex-col mb-2 w-full">
-            <span class="uppercase text-micro tracking-widest mb-2 text-center">Name*</span>
+            <span class="uppercase text-micro tracking-widest mb-2">Name*</span>
             <input class="contact-input text-black py-3 px-5 pixel-corners bg-base" type="name" name="name" required placeholder="Name" />
           </label>
           <label class="flex flex-col w-full">
-            <span class="uppercase text-micro tracking-widest mb-2 text-center">E-mail*</span>
+            <span class="uppercase text-micro tracking-widest mb-2">E-mail*</span>
             <input class="contact-input text-black py-3 px-5 pixel-corners bg-base" type="email" name="email" required placeholder="E-Mail" />
           </label>
         </div>
         <label class="flex flex-col mb-5">
-          <span class="uppercase text-micro tracking-widest mb-2 text-center">Message*</span>
-          <textarea class="contact-input text-black py-3 px-5 pixel-corners bg-base" name="message" required placeholder="Describe your project needs"></textarea>
+          <span class="uppercase text-micro tracking-widest mb-2">Message*</span>
+          <textarea class="contact-input text-black py-3 px-5 pixel-corners bg-base" name="message" required placeholder="Tell me your project needs"></textarea>
         </label>
         <input type="text" name="_gotcha" style="display: none" />
-        <button class="-md:w-full bg-base hover:bg-pank transition-all duration-500 pixel-corners mt-3 pt-2 pb-1.5 px-6 w-fit self-center font-playertwo text-black" type="submit">Send</button>
+        <button class="-md:w-full bg-base hover:bg-pank transition-all duration-500 pixel-corners mt-3 pt-2 pb-1.5 px-6 w-fit font-playertwo text-black" type="submit">Send</button>
       </div>
     </fieldset>
   </form>
