all buttons centered and w-fit

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -21,7 +21,7 @@
           <textarea class="contact-input text-black py-3 px-5 pixel-corners bg-base" name="message" required placeholder="Tell me your project needs"></textarea>
         </label>
         <input type="text" name="_gotcha" style="display: none" />
-        <button class="-md:w-full bg-base hover:bg-pank transition-all duration-500 pixel-corners mt-3 pt-2 pb-1.5 px-6 w-fit font-playertwo text-black" type="submit">Send</button>
+        <button class="-md:w-fit -md:mx-auto bg-base hover:bg-pank transition-all duration-500 pixel-corners mt-3 pt-2 pb-1.5 px-6 w-fit font-playertwo text-black" type="submit">Send!</button>
       </div>
     </fieldset>
   </form>
