better spacing around About section location

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,8 +1,8 @@
 <section id="about" class="step flex flex-col w-full max-w-400 mx-auto -md:px-3 px-6 -md:pt-40 pt-80 -md:-mt-20 -mt-40">
   <header class="step max-w-3xl mx-auto flex flex-col justify-center items-center text-center mb-7">
     <h1 class="shinebig mb-7">About</h1>
-    <p class="h3 mb-5 substep animation__delay-short">Curtis Wirtz</p>
-    <div class="flex mb-7 substep animation__delay-medium">
+    <p class="h3 -md:mb-3 mb-5 substep animation__delay-short">Curtis Wirtz</p>
+    <div class="flex -md:mb-2 mb-7 substep animation__delay-medium">
       <div class="flex">
         <svg class="mt-1.5" width="40px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 40" x="0px" y="0px">
           <title>Icon titled "Pin" by Kiki Rizky from https://thenounproject.com/icon/pin-6611599/. CC BY 3.0 https://creativecommons.org/licenses/by/3.0/</title>
