indent input labels on contact form

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,17 +8,17 @@
       <div class="w-full flex flex-col substep animation__delay-medium">
         <div class="flex -md:flex-col w-full md:space-x-5 mb-2">
           <label class="flex flex-col mb-2 w-full">
-            <span class="uppercase text-micro tracking-widest mb-2">Name*</span>
+            <span class="uppercase text-micro tracking-widest mb-2 -md:ml-5">Name*</span>
             <input class="contact-input text-black py-3 px-5 pixel-corners bg-base" type="name" name="name" required placeholder="Name" />
           </label>
           <label class="flex flex-col w-full">
-            <span class="uppercase text-micro tracking-widest mb-2">E-mail*</span>
+            <span class="uppercase text-micro tracking-widest mb-2 -md:ml-5">E-mail*</span>
             <input class="contact-input text-black py-3 px-5 pixel-corners bg-base" type="email" name="email" required placeholder="E-Mail" />
           </label>
         </div>
         <label class="flex flex-col mb-5">
-          <span class="uppercase text-micro tracking-widest mb-2">Message*</span>
-          <textarea class="contact-input text-black py-3 px-5 pixel-corners bg-base" name="message" required placeholder="Tell me your project needs"></textarea>
+          <span class="uppercase text-micro tracking-widest mb-2 -md:ml-5">Message*</span>
+          <textarea class="contact-input text-black py-3 px-5 pixel-corners bg-base" name="message" required placeholder="Tell me about your project needs"></textarea>
         </label>
         <input type="text" name="_gotcha" style="display: none" />
         <button class="-md:w-fit -md:mx-auto bg-base hover:bg-pank transition-all duration-500 pixel-corners mt-3 pt-2 pb-1.5 px-6 w-fit font-playertwo text-black" type="submit">Send</button>
