chore: ensure taborder for accessibility/screen readers

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,10 +1,10 @@
 <section id="contact" class="flex flex-col w-full max-w-400 mx-auto -md:px-3 px-6 -md:pt-40 pt-80 -md:-mt-20 -mt-40 pb-20 -pb-16">
   <header class="step max-auto flex flex-col justify-center items-center text-center">
-    <h1 class="shinebig mb-7">Contact</h1>
+    <h1 class="shinebig mb-7" tabindex="0">Contact</h1>
     <button id="copyEmailButton" class="flex relative bg-base hover:bg-pank transition-all duration-500 pixel-corners pt-2 pb-1.5 px-6 w-fit mx-auto font-playertwo text-black mb-7">
       <span class="">Copy Email</span>
       <svg class="ml-3" fill="#000000" width="25px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-        <title>Icon '16pxls' (c) by Paul mackenzie paul@whatspauldoing.com. Creative Commons Attribution-ShareAlike 4.0 International License. http://creativecommons.org/licenses/by-sa/4.0/</title>
+        <title aria-hidden="true">Icon '16pxls' (c) by Paul mackenzie paul@whatspauldoing.com. Creative Commons Attribution-ShareAlike 4.0 International License. http://creativecommons.org/licenses/by-sa/4.0/</title>
         <path d="M14 12V2H4V0h12v12h-2zM0 4h12v12H0V4zm2 2v8h8V6H2z" fill-rule="evenodd" />
       </svg>
       <svg class="opacity-0 absolute top-0 right-5 transition-all duration-1000" width="40px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -14,7 +14,7 @@
   </header>
   <form class="step flex flex-col max-w-xl mx-auto" action="https://formspree.io/f/mkggkpab" method="POST">
     <fieldset class="flex w-full">
-      <legend class="h3 mb-5 text-center block substep animation__delay-short">Let's bring your ideas to life.</legend>
+      <legend class="h3 mb-5 text-center block substep animation__delay-short" tabindex="0">Let's bring your ideas to life.</legend>
       <div class="w-full flex flex-col substep animation__delay-medium">
         <div class="flex -md:flex-col w-full md:space-x-5 mb-2">
           <label class="flex flex-col mb-2 w-full">
