--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -18,10 +18,10 @@
   </a>
 
   <div class="relative mx-auto -z-10">
-    <img id="pixel-curtis" class="mx-auto" src="/assets/images/curtis.gif?" alt="A pixelated and cartoonized photo of Curtis" />
+    <img id="pixel-curtis" class="mx-auto" src="/assets/images/curtis.gif?" alt="A pixelated and cartoonized photo of Curtis" tabindex="0" />
 
     <header class="relative bottom-[20%]">
-      <span class="sr-only">Hi, I&apos;m Curtis. A web developer.</span>
+      <span class="sr-only" tabindex="0">Hi, I&apos;m Curtis. A web developer.</span>
       <div class="typewriter mb-5">
         <h1 class="overflow-x-hidden" aria-hidden="true">Hi, I&apos;m Curtis.</h1>
       </div>
