--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,18 +1,18 @@
 <section id="about" class="step flex flex-col w-full max-w-400 mx-auto -md:px-3 px-6 -md:pt-40 pt-80 -md:-mt-20 -mt-40">
   <header class="step max-w-3xl mx-auto flex flex-col justify-center items-center text-center mb-7">
-    <h1 class="shinebig mb-7">About</h1>
-    <p class="h3 -md:mb-3 mb-5 substep animation__delay-short">Curtis Wirtz</p>
+    <h1 class="shinebig mb-7" tabindex="0">About</h1>
+    <p class="h3 -md:mb-3 mb-5 substep animation__delay-short" tabindex="0">Curtis Gray Wirtz</p>
     <div class="flex -md:mb-2 mb-7 substep animation__delay-medium">
       <div class="flex">
         <svg class="mt-1.5" width="40px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 40" x="0px" y="0px">
-          <title>Icon titled "Pin" by Kiki Rizky from https://thenounproject.com/icon/pin-6611599/. CC BY 3.0 https://creativecommons.org/licenses/by/3.0/</title>
+          <title aria-hidden="true">Icon titled "Pin" by Kiki Rizky from https://thenounproject.com/icon/pin-6611599/. CC BY 3.0 https://creativecommons.org/licenses/by/3.0/</title>
           <path fill="#d1e4dd" d="M27,8v-2h-2v-2h-2v-1.97H9v1.97h-2v2h-2v2h-1.97v10h1.97v2h2v2h2v2h2v2h2v2h2v2h2v-2h2v-2h2v-2h2v-2h2v-2h2v-2h2V8h-2Zm-6,8v2h-2v2h-6v-2h-2v-2h-2v-6h2v-2h2v-2h6v2h2v2h2v6h-2Z" />
           <polygon fill="transparent" points="19 10 19 8 13 8 13 10 11 10 11 16 13 16 13 18 19 18 19 16 21 16 21 10 19 10" />
         </svg>
-        <span class="translate-y-0.5 ml-2 flex items-center text-h4">Olympia, WA, USA</span>
+        <span class="translate-y-0.5 ml-2 flex items-center text-h4" tabindex="0">Olympia, WA, USA</span>
       </div>
     </div>
-    <p class="substep animation__delay-long">
+    <p class="substep animation__delay-long" tabindex="0">
       I feel like my mind is . Whereas on the backend, the detailed-oriented fact-based part of my brain temperment and . find satisfaction in both front-end and back-end work. Building UI's feels like an intersection of art and science, whereas My first job wasin pizza I went back to school in my late 20's to persue medical in the approach that I get to use my artistic side on the frontend, wh <br /><br />
 
       I love building web sites and web apps.<br /><br />
@@ -21,11 +21,11 @@
   </header>
 
   <div class="flex justify-center items-center mb-5">
-    <a href="https://github.com/CurtisWirtz" target="_blank" class="group substep animation__delay-short">
+    <a href="https://github.com/CurtisWirtz" target="_blank" class="group substep animation__delay-short" aria-label="Curtis's GitHub Profile">
       <title>Pixelated GitHub Icon</title>
       <svg width="48px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path class="group-hover:fill-pank transition-all duration-500" d="m23 9v6h-1v2h-1v2h-1v1h-1v1h-1v1h-2v1h-1v-5h-1v-1h1v-1h2v-1h1v-1h1v-5h-1v-3h-2v1h-1v1h-1v-1h-4v1h-1v-1h-1v-1h-2v3h-1v5h1v1h1v1h2v2h-2v-1h-1v-1h-2v1h1v2h1v1h3v3h-1v-1h-2v-1h-1v-1h-1v-1h-1v-2h-1v-2h-1v-6h1v-2h1v-2h1v-1h1v-1h2v-1h2v-1h6v1h2v1h2v1h1v1h1v2h1v2z" fill="#d1e4dd" /></svg>
     </a>
-    <a href="https://www.linkedin.com/in/curtiswirtz" target="_blank" class="group ml-5 substep animation__delay-medium">
+    <a href="https://www.linkedin.com/in/curtiswirtz" target="_blank" class="group ml-5 substep animation__delay-medium" aria-label="Curtis's Linkedin Profile">
       <svg class="group-hover:fill-pank transition-all duration-500" width="48px" fill="#d1e4dd" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve">
         <title>Pixelated Linkedin Icon</title>
         <g>
