--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -1,7 +1,7 @@
 <section id="showcase" class="list-group flex flex-col max-w-400 mx-auto -md:px-3 px-6 -md:pt-40 pt-80 -md:-mt-20 -mt-40">
   <header class="step max-auto flex flex-col justify-center items-center -md:mb-20 mb-40 text-center">
-    <h1 class="shinebig mb-7">Showcase</h1>
-    <p class="max-w-3xl substep animation__delay-short">
+    <h1 class="shinebig mb-7" tabindex="0">Showcase</h1>
+    <p class="max-w-3xl substep animation__delay-short" tabindex="0">
       Each project is a unique journey; Relationships forged, deploy pipelines broken, deadlines met, and a couple of new patterns or tools for my back pocket.<br /><br />
       I'm proud to showcase these select recent works.
     </p>
@@ -10,18 +10,19 @@
   {% for project in page.projects %}
   <article class="step project flex -md:flex-col -md:mb-20 mb-40 {% if forloop.index > 3 %}hidden{% endif %}">
     {% if project.title %}
-    <h2 class="mb-5 mx-auto text-center md:hidden">{{project.title}}</h2>
+    <h2 class="mb-5 mx-auto text-center md:hidden" tabindex="0">{{project.title}}</h2>
     {% endif %}
     <div class="-md:max-w-lg -md:mx-auto -md:mb-3 w-full md:w-2/5 lg:w-1/2 relative overflow-hidden pixel-corners aspect-[5/3]">
-      <img class="zooms absolute w-full h-full z-0 inset-0 object-cover" src="{{project.image}}" alt="Screenshot of the {{project.title}} website." />
+      <img class="zooms absolute w-full h-full z-0 inset-0 object-cover" src="{{project.image}}" alt="Screenshot of the {{project.title}} website." tabindex="0" />
     </div>
     <div class="w-full md:w-3/5 lg:w-1/2 relative -md:px-0 px-6">
       <div class="max-w-lg mx-auto flex flex-col justify-center h-full z-10 text-center">
         {% if project.title %}
-        <h2 class="substep mb-3.5 -md:hidden">{{project.title}}</h2>
+        <h2 class="substep mb-3.5 -md:hidden" tabindex="0">{{project.title}}</h2>
         {% endif %} {% if project.tech %}
         <div class="substep animation__delay-short marquee relative flex text-micro -md:mb-2.5 mb-5">
-          <ul class="marquee__content">
+          <span class="sr-only" tabindex="0">Tech used: {% for tech in project.tech %}{{ tech }}, {% endfor %}</span>
+          <ul class="marquee__content" aria-hidden="true">
             {% for tech in project.tech %}
             <li class="px-3 pt-1.5 pb-1 whitespace-pre mr-4">{{ tech }}</li>
             {% endfor %}
@@ -35,7 +36,7 @@
           <div class="absolute top-0 left-0 bottom-0 bg-gradient-to-l from-transparent to-black"></div>
         </div>
         {% endif %} {% if project.description %}
-        <p class="substep animation__delay-medium -md:mb-5 mb-7">{{project.description}}</p>
+        <p class="substep animation__delay-medium -md:mb-5 mb-7" tabindex="0">{{project.description}}</p>
         {% endif %} {% if project.url %}
         <a class="substep animation__delay-long font-body flex group hover:text-pank font-playertwo transition-all duration-300 w-full justify-center" href="{{project.url}}" target="_blank" rel="noopener noreferrer">
           <span class="mr-3">View Project</span>
