chore: presentable about copy while undergoing construction

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,10 +13,8 @@
       </div>
     </div>
     <p class="substep animation__delay-long" tabindex="0">
-      I feel like my mind is . Whereas on the backend, the detailed-oriented fact-based part of my brain temperment and . find satisfaction in both front-end and back-end work. Building UI's feels like an intersection of art and science, whereas My first job wasin pizza I went back to school in my late 20's to persue medical in the approach that I get to use my artistic side on the frontend, wh <br /><br />
-
       I love building web sites and web apps.<br /><br />
-      I&apos;ve tinkered with programming since 1998, when I was 11 years old. After short stints in other careers, as I decided to dedicate myself to programming full time as a professional. when I discovered <a href="https://museumofzzt.com/article/view/747/zzt-oop-101/">ZZT OOP</a> in 1998. m proud to showcase
+      I&apos;m working on this lil' bio area.
     </p>
   </header>
 
