--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -49,22 +49,23 @@
         </a>
       </li>
     </ul>
-
-    <ul class="flex flex-col space-y-1 -md:space-y-2">
+    <div role="group">
       <h3 class="uppercase text-base mb-3" tabindex="0">This Site</h3>
-      <li>
-        <a href="https://github.com/CurtisWirtz/curtiswirtz.github.io" class="hover:text-pank transition-all duration-500"><span>Source Code</span></a>
-      </li>
-      <li>
-        <a href="#showcase" class="hover:text-pank transition-all duration-500"><span>Showcase</span></a>
-      </li>
-      <li>
-        <a href="#about" class="hover:text-pank transition-all duration-500"><span>About</span></a>
-      </li>
-      <li>
-        <a href="#contact" class="hover:text-pank transition-all duration-500"><span>Contact</span></a>
-      </li>
-    </ul>
+      <ul class="flex flex-col space-y-1 -md:space-y-2">
+        <li>
+          <a href="https://github.com/CurtisWirtz/curtiswirtz.github.io" class="hover:text-pank transition-all duration-500"><span>Source Code</span></a>
+        </li>
+        <li>
+          <a href="#showcase" class="hover:text-pank transition-all duration-500"><span>Showcase</span></a>
+        </li>
+        <li>
+          <a href="#about" class="hover:text-pank transition-all duration-500"><span>About</span></a>
+        </li>
+        <li>
+          <a href="#contact" class="hover:text-pank transition-all duration-500"><span>Contact</span></a>
+        </li>
+      </ul>
+    </div>
 
     <div class="-md:col-span-2 col-span-1 flex flex-col items-end">
       <span class="flex md:mb-3 -md:order-2" tabindex="0">&#169; {{ site.time | date: "%Y" }} | Curtis Wirtz </span>
