--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1120,6 +1120,11 @@ h5, .h5 {
   color: rgb(0 0 0 / var(--tw-text-opacity, 1));
 }
 
+.text-pank {
+  --tw-text-opacity: 1;
+  color: rgb(239 126 247 / var(--tw-text-opacity, 1));
+}
+
 .opacity-0 {
   opacity: 0;
 }
@@ -1555,9 +1560,24 @@ body {
   background-color: rgb(239 126 247 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:text-base:hover {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .hover\:text-pank:hover {
   --tw-text-opacity: 1;
   color: rgb(239 126 247 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-base:hover {
+  --tw-text-opacity: 1;
+  color: rgb(209 228 221 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-\[\#d1e4dd\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(209 228 221 / var(--tw-text-opacity, 1));
 }
 
 .group:hover .group-hover\:translate-x-2 {
