fix: link should open in new tab

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,7 +53,7 @@
       <h3 class="uppercase text-base mb-3" tabindex="0">This Site</h3>
       <ul class="flex flex-col space-y-1 -md:space-y-2">
         <li>
-          <a href="https://github.com/CurtisWirtz/curtiswirtz.github.io" class="hover:text-pank transition-all duration-500"><span>Source Code</span></a>
+          <a href="https://github.com/CurtisWirtz/curtiswirtz.github.io" target="_blank" class="hover:text-pank transition-all duration-500"><span>Source Code</span></a>
         </li>
         <li>
           <a href="#showcase" class="hover:text-pank transition-all duration-500"><span>Showcase</span></a>
