--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -3,8 +3,7 @@
     <h1 class="shinebig mb-7" tabindex="0">Showcase</h1>
     <p class="max-w-3xl substep animation__delay-short" tabindex="0">
       Each project is a unique journey; Relationships forged, deploy pipelines repaired, deadlines met, and a couple of new patterns or tools for my back pocket.<br /><br />
-      I'm proud to showcase these select recent works.<br /><br />
-      Special thanks to <a class="text-pank hover:text-[#d1e4dd] transition-all duration-500" href="https://bxroberts.org/" target="_blank">Brandon Roberts</a> and my colleagues at <a class="text-pank hover:text-[#d1e4dd] transition-all duration-500" href="https://www.murmurcreative.com/" target="_blank">Murmur Creative</a>.<br /><br />
+      I'm proud to showcase these select recent works.
     </p>
   </header>
 
