chore: better glow effect animation on section h1s

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,8 +1,8 @@
 <section id="about" class="step flex flex-col w-full max-w-400 mx-auto -md:px-3 px-6 -md:pt-40 pt-80 -md:-mt-20 -mt-40">
   <header class="step max-w-3xl mx-auto flex flex-col justify-center items-center text-center mb-7">
-    <h1 class="shinebig mb-7" tabindex="0">About</h1>
-    <p class="h3 -md:mb-3 mb-5 substep animation__delay-short" tabindex="0">Curtis Gray Wirtz</p>
-    <div class="flex -md:mb-2 mb-7 substep animation__delay-medium">
+    <h1 class="warm-glow mb-7" tabindex="0">About</h1>
+    <p class="h3 -md:mb-3 mb-3 substep animation__delay-short" tabindex="0">Curtis Gray Wirtz</p>
+    <div class="flex -md:mb-2 mb-3 substep animation__delay-medium">
       <div class="flex">
         <svg class="mt-1.5" width="40px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 40" x="0px" y="0px">
           <title aria-hidden="true">Icon titled "Pin" by Kiki Rizky from https://thenounproject.com/icon/pin-6611599/. CC BY 3.0 https://creativecommons.org/licenses/by/3.0/</title>
@@ -13,8 +13,11 @@
       </div>
     </div>
     <p class="substep animation__delay-long" tabindex="0">
-      I love building web sites and web apps.<br /><br />
-      I&apos;m working on this lil' bio area.
+      My experience ranges from working closely with clients as the lone full-stack developer, to being a stalwart member in a collaborative environment with distributed teams.
+      <br /><br />
+      I excel at solving problems under time constraints and pivot well to suit evolving business needs and tool ecosystems. I’m committed to keeping pace with industry best practices to deliver visually elegant and functionally robust web products.
+      <br /><br />
+      Special thanks to <a class="text-pank hover:text-[#d1e4dd] transition-all duration-500" href="https://bxroberts.org/" target="_blank">Brandon Roberts</a> and my colleagues at <a class="text-pank hover:text-[#d1e4dd] transition-all duration-500" href="https://www.murmurcreative.com/" target="_blank">Murmur Creative</a>.
     </p>
   </header>
 
