--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,6 +1,6 @@
 <section id="contact" class="flex flex-col w-full max-w-400 mx-auto -md:px-3 px-6 -md:pt-40 pt-80 -md:-mt-20 -mt-40 pb-20 -pb-16">
   <header class="step max-auto flex flex-col justify-center items-center text-center">
-    <h1 class="shinebig mb-7" tabindex="0">Contact</h1>
+    <h1 class="warm-glow mb-7" tabindex="0">Contact</h1>
     <button id="copyEmailButton" class="flex relative bg-base hover:bg-pank transition-all duration-500 pixel-corners pt-2 pb-1.5 px-6 w-fit mx-auto font-playertwo text-black mb-7">
       <span class="">Copy Email</span>
       <svg class="ml-3" fill="#000000" width="25px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
