--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -1,6 +1,6 @@
 <section id="showcase" class="list-group flex flex-col max-w-400 mx-auto -md:px-3 px-6 -md:pt-40 pt-80 -md:-mt-20 -mt-40">
   <header class="step max-auto flex flex-col justify-center items-center -md:mb-20 mb-40 text-center">
-    <h1 class="shinebig mb-7" tabindex="0">Showcase</h1>
+    <h1 class="warm-glow mb-7" tabindex="0">Showcase</h1>
     <p class="max-w-3xl substep animation__delay-short" tabindex="0">
       Each project is a unique journey; Relationships forged, deploy pipelines repaired, deadlines met, and a couple of new patterns or tools for my back pocket.<br /><br />
       I'm proud to showcase these select recent works.
