chore: about copy is under construction

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,7 @@
 <section id="about" class="step flex flex-col w-full max-w-400 mx-auto -md:px-3 px-6 -md:pt-40 pt-80 -md:-mt-20 -mt-40">
   <header class="step max-w-3xl mx-auto flex flex-col justify-center items-center text-center mb-7">
     <h1 class="warm-glow mb-7" tabindex="0">About</h1>
-    <p class="h3 -md:mb-3 mb-3 substep animation__delay-short" tabindex="0">Curtis Gray Wirtz</p>
+    <p class="h3 -md:mb-3 mb-3 substep animation__delay-short" tabindex="0">Curtis Wirtz</p>
     <div class="flex -md:mb-2 mb-3 substep animation__delay-medium">
       <div class="flex">
         <svg class="mt-1.5" width="40px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 40" x="0px" y="0px">
@@ -12,13 +12,7 @@
         <span class="translate-y-0.5 ml-2 flex items-center text-h4" tabindex="0">Olympia, WA, USA</span>
       </div>
     </div>
-    <p class="substep animation__delay-long" tabindex="0">
-      My experience ranges from working closely with clients as the lone full-stack developer, to being a stalwart member in a collaborative environment with distributed teams.
-      <br /><br />
-      I excel at solving problems under time constraints and pivot well to suit evolving business needs and tool ecosystems. I’m committed to keeping pace with industry best practices to deliver visually elegant and functionally robust web products.
-      <br /><br />
-      Special thanks to <a class="text-pank hover:text-[#d1e4dd] transition-all duration-500" href="https://bxroberts.org/" target="_blank">Brandon Roberts</a> and my colleagues at <a class="text-pank hover:text-[#d1e4dd] transition-all duration-500" href="https://www.murmurcreative.com/" target="_blank">Murmur Creative</a>.
-    </p>
+    <p class="substep animation__delay-long" tabindex="0">UNDER CONSTRUCTION - I'm a slow writer</p>
   </header>
 
   <div class="flex justify-center items-center mb-5">
