chore: edit copy on showcase

--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -4,7 +4,7 @@
     <p class="max-w-3xl substep animation__delay-short" tabindex="0">
       I'm proud to showcase these select recent works.
       <br /><br />
-      They're products of relationships forged, deploy pipelines repaired, and deadlines met. Each comes with a handful of new patterns and tools to keep in my back pocket.
+      They're products of relationships forged, obstacles overcome, and deadlines met. Each with new patterns and tools for my back pocket.
       <br /><br />
       Special thanks to <a class="text-pank hover:text-[#d1e4dd] transition-all duration-500" href="https://bxroberts.org/" target="_blank">Brandon Roberts</a> and my colleagues at <a class="text-pank hover:text-[#d1e4dd] transition-all duration-500" href="https://www.murmurcreative.com/" target="_blank">Murmur Creative</a>.
     </p>
