chore: add about copy

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,8 +1,8 @@
 <section id="about" class="step flex flex-col w-full max-w-400 mx-auto -md:px-3 px-6 -md:pt-40 pt-80 -md:-mt-20 -mt-40">
   <header class="step max-w-3xl mx-auto flex flex-col justify-center items-center text-center mb-7">
     <h1 class="warm-glow mb-7" tabindex="0">About</h1>
-    <p class="h3 -md:mb-3 mb-3 substep animation__delay-short" tabindex="0">Curtis Wirtz</p>
-    <div class="flex -md:mb-2 mb-3 substep animation__delay-medium">
+    <span class="h3 -md:mb-3 mb-3 substep animation__delay-short" tabindex="0">Curtis Wirtz</span>
+    <div class="flex -md:mb-2 mb-4 substep animation__delay-medium">
       <div class="flex">
         <svg class="mt-1.5" width="40px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 40" x="0px" y="0px">
           <title aria-hidden="true">Icon titled "Pin" by Kiki Rizky from https://thenounproject.com/icon/pin-6611599/. CC BY 3.0 https://creativecommons.org/licenses/by/3.0/</title>
@@ -12,7 +12,19 @@
         <span class="translate-y-0.5 ml-2 flex items-center text-h4" tabindex="0">Olympia, WA, USA</span>
       </div>
     </div>
-    <p class="substep animation__delay-long" tabindex="0">UNDER CONSTRUCTION - I'm a slow writer</p>
+    <p class="substep animation__delay-long -md:mb-3 mb-5" tabindex="0">
+      I'm a full-stack professional with over 6 years of experience.<br /><br />
+
+      In that time, I've enjoyed building, maintaining, and repairing many websites, plugins, and integrations. Having used a myriad of technologies, I've become somewhat framework-agnostic and proficient in choosing a stack that best suits project needs.<br /><br />
+
+      On the front-end, I emphasize accessibility, design-to-code accuracy, re-usable atomic structure, SEO, and performance optimization best practices.<br /><br />
+
+      Like many, I started with the out-of-box monolith, Wordpress. Gradually, I introduced containerization, PostGres with headless CMS, SSG, and CD/CI pipelines. Inevitably, I graduated to a modern Typescript, server vs. client ecosystem that utilizes TSX and graphQL. I'm a heavy Node.js user but enjoy Django + Python backends.<br /><br />
+
+      I've been a stalwart team member in a collaborative environment with distributed teams. I have lead-developer experience, pay attention to detail, and have a strong desire to learn. I focus on team goals, remain unpretentious, and prioritize clear communication.<br /><br />
+
+      Let's work together!
+    </p>
   </header>
 
   <div class="flex justify-center items-center mb-5">
