--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -586,12 +586,6 @@ h4, .h4 {
   line-height: 1.2;
 }
 
-h5, .h5 {
-  font-family: "Press Start 2P";
-  font-weight: 700;
-  line-height: 1.2;
-}
-
 .sr-only {
   position: absolute;
   width: 1px;
@@ -606,6 +600,10 @@ h5, .h5 {
 
 .pointer-events-none {
   pointer-events: none;
+}
+
+.visible {
+  visibility: visible;
 }
 
 .absolute {
@@ -753,6 +751,10 @@ h5, .h5 {
   margin-bottom: 0.875rem;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .mb-40 {
   margin-bottom: 10rem;
 }
@@ -815,14 +817,6 @@ h5, .h5 {
 
 .mt-\[-11px\] {
   margin-top: -11px;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
-.mt-1 {
-  margin-top: 0.25rem;
 }
 
 .block {
@@ -1020,16 +1014,6 @@ h5, .h5 {
 
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
-.from-transparent {
-  --tw-gradient-from: transparent var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.to-black {
-  --tw-gradient-to: #000 var(--tw-gradient-to-position);
 }
 
 .object-cover {
@@ -1504,18 +1488,6 @@ body {
   to {
     transform: translateX(calc(-100% - var(--gap)));
   }
-}
-
-/* Fade to black on X edges of marquee */
-
-.bg-gradient-to-r {
-  opacity: 1;
-  width: 10%;
-}
-
-.bg-gradient-to-l {
-  opacity: 1;
-  width: 10%;
 }
 
 /* Project Image zoom */
